Improve virtual threads creation
Signed-off-by: Paolo Di Tommaso <paolo.ditommaso@gmail.com>